--- a/V_ROOT_IOT/Base.lproj/Main.storyboard
+++ b/V_ROOT_IOT/Base.lproj/Main.storyboard
@@ -1,24 +1,127 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pQI-bk-O2y">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Users Data-->
+        <scene sceneID="8aS-hc-ib9">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="I5s-Im-Jar" customClass="myTableViewController" customModule="V_ROOT_IOT" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="cVM-Q9-pMf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="80" id="M6T-TB-b8w" customClass="myTableViewCell" customModule="V_ROOT_IOT" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="80"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="M6T-TB-b8w" id="BSW-RY-36s">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7LS-TC-uRh">
+                                            <rect key="frame" x="16" y="11" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="Efx-dW-wP4"/>
+                                                <constraint firstAttribute="width" constant="60" id="gb0-aA-XrY"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FNN-Ao-QzG">
+                                            <rect key="frame" x="92" y="11" width="48" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="FNN-Ao-QzG" firstAttribute="leading" secondItem="7LS-TC-uRh" secondAttribute="trailing" constant="16" id="7O8-yS-JZb"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="FNN-Ao-QzG" secondAttribute="trailing" constant="219" id="FUz-R9-jJa"/>
+                                        <constraint firstItem="7LS-TC-uRh" firstAttribute="top" secondItem="BSW-RY-36s" secondAttribute="topMargin" id="Q9E-vr-gJd"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="FNN-Ao-QzG" secondAttribute="bottom" constant="41" id="Sy6-Nj-SBd"/>
+                                        <constraint firstItem="7LS-TC-uRh" firstAttribute="top" secondItem="FNN-Ao-QzG" secondAttribute="top" id="vkk-VT-Lah"/>
+                                        <constraint firstItem="7LS-TC-uRh" firstAttribute="leading" secondItem="BSW-RY-36s" secondAttribute="leadingMargin" id="yH3-qD-klO"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="cellImage" destination="7LS-TC-uRh" id="DGJ-cY-eoO"/>
+                                    <outlet property="cellLabel" destination="FNN-Ao-QzG" id="Eo0-AB-siC"/>
+                                    <segue destination="Xhj-PA-s0T" kind="show" identifier="mySegue" id="t61-x9-ZGN"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="I5s-Im-Jar" id="Doj-bL-Z3s"/>
+                            <outlet property="delegate" destination="I5s-Im-Jar" id="trC-0y-Rf9"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Users Data" id="cTP-Nu-SCl"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="URU-2J-UNn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="543.20000000000005" y="138.98050974512745"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="3bq-UG-gBE">
+            <objects>
+                <viewController id="Xhj-PA-s0T" customClass="ViewController" customModule="V_ROOT_IOT" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jfD-tc-dpq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bZn-pJ-zbX">
+                                <rect key="frame" x="0.0" y="64" width="375" height="232"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se6-jm-q3G">
+                                <rect key="frame" x="119" y="355" width="120" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bZn-pJ-zbX" firstAttribute="trailing" secondItem="kb6-38-NQm" secondAttribute="trailing" id="3md-xW-0Pt"/>
+                            <constraint firstItem="bZn-pJ-zbX" firstAttribute="leading" secondItem="kb6-38-NQm" secondAttribute="leading" id="4e4-px-qC1"/>
+                            <constraint firstItem="kb6-38-NQm" firstAttribute="bottom" secondItem="bZn-pJ-zbX" secondAttribute="bottom" constant="371" id="DsA-qS-qLF"/>
+                            <constraint firstItem="bZn-pJ-zbX" firstAttribute="top" secondItem="kb6-38-NQm" secondAttribute="top" id="xSB-V4-di6"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="kb6-38-NQm"/>
+                    </view>
+                    <connections>
+                        <outlet property="secondImage" destination="bZn-pJ-zbX" id="ePj-fl-lhT"/>
+                        <outlet property="secondLabel" destination="se6-jm-q3G" id="OZZ-Go-jdN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Nj-iM-QI5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1237.5999999999999" y="138.98050974512745"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2Qy-mP-Ozi">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pQI-bk-O2y" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XGV-qk-aQ5">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="I5s-Im-Jar" kind="relationship" relationship="rootViewController" id="G20-3w-iCH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Edg-wJ-hcP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-164" y="139"/>
         </scene>
     </scenes>
 </document>
